--- a/wallet/README
+++ b/wallet/README
@@ -3,16 +3,16 @@ FILES
 Your wallet contains your private keys and various transaction related metadata. It is stored in app-private
 storage:
 
-	Mainnet: /data/data/hashengineering.darkcoin.wallet/files/wallet-protobuf (MODE_PRIVATE)
-	Testnet: /data/data/hashengineering.darkcoin.wallet_test/files/wallet-protobuf-testnet (MODE_WORLD_READABLE | MODE_WORLD_WRITEABLE)
+	Mainnet: /data/data/paccommunity.pac.wallet/files/wallet-protobuf (MODE_PRIVATE)
+	Testnet: /data/data/paccommunity.pac.wallet_test/files/wallet-protobuf-testnet (MODE_WORLD_READABLE | MODE_WORLD_WRITEABLE)
 
 The wallet file format is not compatible to wallet.dat (Satoshi client). Rather, it uses a custom protobuf format
 which should be compatible between clients using dashj.
 
 Certain actions cause automatic rolling backups of your wallet to app-private storage:
 
-	Mainnet: /data/data/hashengineering.darkcoin.wallet/files/key-backup-protobuf (MODE_PRIVATE)
-	Testnet: /data/data/hashengineering.darkcoin.wallet_test/files/key-backup-protobuf-testnet (MODE_PRIVATE)
+	Mainnet: /data/data/paccommunity.pac.wallet/files/key-backup-protobuf (MODE_PRIVATE)
+	Testnet: /data/data/paccommunity.pac.wallet_test/files/key-backup-protobuf-testnet (MODE_PRIVATE)
 
 Your wallet can be manually backed up to and restored from external storage:
 
@@ -27,15 +27,15 @@ itself to restore from the backup, see the separate README.recover guide.
 The current fee rate for each of the fee categories (economic, normal, priority) is cached in
 app-private storage:
 
-    Mainnet: /data/data/hashengineering.darkcoin.wallet/files/fees.txt
-    Testnet: /data/data/hashengineering.darkcoin.wallet_test/files/fees-testnet.txt
+    Mainnet: /data/data/paccommunity.pac.wallet/files/fees.txt
+    Testnet: /data/data/paccommunity.pac.wallet_test/files/fees-testnet.txt
 
 
 DEBUGGING
 
 Wallet file for Testnet can be pulled from an (even un-rooted) device using
 
-	adb pull /data/data/hashengineering.darkcoin.wallet/files/wallet-protobuf-testnet
+	adb pull /data/data/paccommunity.pac.wallet/files/wallet-protobuf-testnet
 
 Log messages can be viewed by
 
